<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/density16">

    <ImageView
        android:id="@+id/story_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/density0"
        android:contentDescription="@string/txt_image_desc"
        android:layout_marginBottom="@dimen/density16"
        android:scaleType="centerCrop"
        android:transitionName="image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_storyTitle"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_storyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/density8"
        android:layout_marginTop="@dimen/density16"
        android:text="@string/txt_headline"
        android:textColor="@color/black"
        android:textSize="@dimen/scale24"
        android:textStyle="bold"
        android:transitionName="title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/story_image"
        app:layout_constraintBottom_toTopOf="@id/tv_story_detail_desc" />

    <TextView
        android:id="@+id/tv_story_detail_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_desc"
        android:textSize="@dimen/scale16"
        android:transitionName="description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_storyTitle"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>